MDEV-16869 String functions don't respect character set of JSON_VALUE.

Item_func_json_value::val_str() produced string of wrong charset.